# dolphin-libretro

./: CMakeLists.txt
.github/workflows/: Yandroid-armv7.yml  android-armv7.yml  build-dolphin-armv7.yml  build.yml
Source/Core/AudioCommon/: AudioCommonLibretro.cpp
Source/Core/Common/: VersionLibretro.cpp
Source/Core/Common/GL/GLInterface/: GLInterface.cpp  LibretroGL.cpp  LibretroGL.h
Source/Core/Common/Logging/: ConsoleListenerLibretro.cpp
libretro/: Host.cpp  Makefile  Makefile.common  libretro.cpp
